# apple-juicer

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  index_artifacts.py  mkdocs.yml  mock_backend.py  nginx.conf  pyproject.toml  test_extract_whatsapp.py  test_progress_bar.html
.github/workflows/: mkdocs.yml
alembic/versions/: 001_add_decryption_status.py
api/: dependencies.py  main.py  schemas.py  security.py
api/routes/: __init__.py  backups.py
core/: queue.py
core/backupfs/: __init__.py  backup_fs.py  discovery.py  session_cache.py  types.py
core/config/: settings.py
core/db/: artifacts.py  models.py  session.py
core/security/: encryption.py
core/services/: __init__.py  backup_registry.py  decrypt_orchestrator.py  unlock_manager.py
docs/: index.md
docs/architecture/: backend.md  frontend.md  overview.md  storage.md  worker.md
docs/guides/: docker-compose.md  local-development.md  quickstart.md
docs/operations/: configuration.md  security.md  tasks.md  troubleshooting.md
docs/reference/: api.md  directory-layout.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx.old  AppNew.css  AppNew.tsx  index.css
frontend/src/lib/: api.ts  types.ts  useLocalStorage.ts
frontend/src/pages/: BackupSelector.tsx  Explorer.tsx  Explorer.tsx.backup  PasswordPrompt.tsx
frontend/src/styles/: BackupSelector.css  (+2 more)
parsers/: __init__.py  base.py  calendar.py  contacts.py  messages.py  notes.py  photos.py  whatsapp.py
worker/: tasks.py
